@@ -31,6 +31,8 @@ Version 1.9.1+svn:
    * Fixed: A resize glitch causing resize events to be lost.
    * Changed: All buttons in the title screen now have a hotkey.
    * Changed: Refresh cache hotkey is CMD+F5 on the Mac by default now.
+   * Fixed: Don't trigger an assertion failure if no tips are defined
+     (bug #16731).
  * WML Engine:
    * id= in SUFs now accepts a comma-separated list
    * [capture_village] now accepts a full SLF
